--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,9 +17,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
-      <th>Rating</th>
-      <th>Release Date</th>
+      <th><%= link_to 'Movie Title', movies_path(sorting: {'title': 1}, ratings: {@ratings_to_show.each}), id: 'title_header', class: 'table-header' %></th>
+      <th><%= link_to 'Rating', movies_path(sorting: {'rating': 1}, ratings: {@ratings_to_show.each}), id: 'rating_header', class: 'table-header' %></th>
+      <th><%= link_to 'Release Date', movies_path(sorting: {'release_date': 1}, ratings: {@ratings_to_show.each}), id: 'release_date_header', class: 'table-header' %></th>
       <th>More Info</th>
     </tr>
   </thead>
