--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,12 +3,12 @@
 
 <%#  Part 1: Start here... %>
 
-<%= form_tag movies_path, method: :get, :id, 'ratings_form do %>
+<%= form_tag movies_path, method: :get, id: 'ratings_form' do %>
   Include:
   <% @all_ratings.each do |rating| %>
-    <div class = "form-check form-check-inline">
+    <div class="form-check  form-check-inline">
       <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
-      <%= check_box_tag "ratings[#{rating}]", "1", @ratings_to_show.include?(rating), class: 'form-check-input' %>
+      <%= check_box_tag "ratings[#{rating}]", "1",  @ratings_to_show.include?(rating), class: 'form-check-input' %>
     </div>
   <% end %>
   <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
@@ -17,9 +17,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to 'Movie Title', movies_path(sorting: {'title': 1}, ratings: {@ratings_to_show.each}), id: 'title_header', class: 'table-header' %></th>
-      <th><%= link_to 'Rating', movies_path(sorting: {'rating': 1}, ratings: {@ratings_to_show.each}), id: 'rating_header', class: 'table-header' %></th>
-      <th><%= link_to 'Release Date', movies_path(sorting: {'release_date': 1}, ratings: {@ratings_to_show.each}), id: 'release_date_header', class: 'table-header' %></th>
+      <th><%= link_to 'Movie Title', movies_path(sorting: {'title': 1}), id: 'title_header', class: 'table-header' %></th>
+      <th><%= link_to 'Rating', movies_path(sorting: {'rating': 1}), id: 'rating_header', class: 'table-header' %></th>
+      <th><%= link_to 'Release Date', movies_path(sorting: {'release_date': 1}), id: 'release_date_header', class: 'table-header' %></th>
       <th>More Info</th>
     </tr>
   </thead>
