--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,7 +17,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to 'Movie Title', movies_path(sorting: {'title': 1}), id: 'title_header', class: 'table-header' %></th>
+      <th><%= link_to 'Movie Title', movies_path(sorting: {'title': 1}, rating: @ratings_to_show), id: 'title_header', class: 'table-header' %></th>
       <th><%= link_to 'Rating', movies_path(sorting: {'rating': 1}), id: 'rating_header', class: 'table-header' %></th>
       <th><%= link_to 'Release Date', movies_path(sorting: {'release_date': 1}), id: 'release_date_header', class: 'table-header' %></th>
       <th>More Info</th>
